# TTBoard

./: .gitignore  README.md  out.json  pyproject.toml
src/ttboard/: __init__.py
src/ttboard/app/: app.py
src/ttboard/cli/: main.py  run.py
src/ttboard/gui/: footer.py  gridTable.py  mainWindow.py  menu.py  panels.py  scroll.py  tables.py
src/ttboard/model/: __init__.py  appModel.py  metadata.py  settings.py
src/ttboard/tests/: testAppFlow1.py  testJsonPath.py  testSelector.py
src/ttboard/tools/: __init__.py  assets.py  field.py  runner.py  selector.py
src/ttboard/view/: __init__.py  tableManager.py  viewControl.py  vmodel.py
tests/: TestModule.py  testUpdate.py  test_json_update.py  test_selector.py
tests/data/: testInput.json
